fix apps and unit tests